@@ -59,6 +59,12 @@ Documentation
 - Issue #20765: Add missing documentation for PurePath.with_name() and
   PurePath.with_suffix().
 
+- Issue #19407: New package installation and distribution guides based on
+  the Python Packaging Authority tools. Existing guides have been retained
+  as legacy links from the distutils docs, as they still contain some
+  required reference material for tool developers that isn't recorded
+  anywhere else.
+
 Tests
 -----
 
